--- a/config/routes.yml
+++ b/config/routes.yml
@@ -2,7 +2,6 @@
 # @see https://devdocs.prestashop.com/1.7/modules/concepts/controllers/admin-controllers/tabs/
 #
 # configuration
-# configuration
 flavioski_modularsofas_configuration_index:
   path: /modularsofas/configuration
   methods: [GET]
@@ -10,3 +9,29 @@ flavioski_modularsofas_configuration_index:
     _controller: 'Flavioski\Module\ModularSofas\Controller\Admin\ConfigurationController::indexAction'
     _legacy_controller: 'AdminModularSofasConfiguration'
     _legacy_link: 'AdminModularSofasConfiguration'
+
+# modular
+flavioski_modularsofas_modular_index:
+  path: /modularsofas/modular/{offset}/{limit}/{orderBy}/{sortOrder}
+  methods: [GET]
+  defaults:
+    _controller: 'Flavioski\Module\ModularSofas\Controller\Admin\ModularController::indexAction'
+    _legacy_controller: 'AdminModularSofasModular'
+    _legacy_link: 'AdminModularSofasModular'
+    limit: last
+    offset: 0
+    orderBy: last
+    sortOrder: last
+  requirements:
+    limit: _limit|last|\d+
+    orderBy: last|id_product|name|code|price|active
+    offset: last|\d+
+    sortOrder: last|asc|desc
+
+flavioski_modularsofas_modular_generate:
+  path: /modularsofas/generate
+  methods: [GET, POST]
+  defaults:
+    _controller: 'Flavioski\Module\ModularSofas\Controller\Admin\ModularController::generateAction'
+    _legacy_controller: 'AdminModularSofasModular'
+    _legacy_link: 'AdminModularSofasModular:generate'
