--- a/config/services.yml
+++ b/config/services.yml
@@ -3,3 +3,35 @@ imports:
   - { resource: ./common.yml }
 
 services:
+  # Grid services
+  flavioski.module.modularsofas.grid.definition.factory.modulars:
+    class: 'Flavioski\Module\ModularSofas\Grid\Definition\Factory\ModularGridDefinitionFactory'
+    parent: 'prestashop.core.grid.definition.factory.abstract_grid_definition'
+    arguments:
+      - "@=service('router').generate('admin_common_reset_search', {'controller': 'modular', 'action': 'index'})"
+      - "@=service('router').generate('flavioski_modularsofas_modular_index')"
+
+  flavioski.module.modularsofas.grid.query_builder.modular:
+    class: 'Flavioski\Module\ModularSofas\Grid\Query\ModularQueryBuilder'
+    parent: 'prestashop.core.grid.abstract_query_builder'
+    public: true
+    arguments:
+      - '@prestashop.core.query.doctrine_search_criteria_applicator'
+      - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
+      - "@=service('prestashop.adapter.legacy.context').getContext().shop.id"
+
+  flavioski.module.modularsofas.grid.data_provider.modulars:
+    class: '%prestashop.core.grid.data.factory.doctrine_grid_data_factory%'
+    arguments:
+      - '@flavioski.module.modularsofas.grid.query_builder.modular'
+      - '@prestashop.core.hook.dispatcher'
+      - '@prestashop.core.grid.query.doctrine_query_parser'
+      - 'modular'
+
+  flavioski.module.modularsofas.grid.factory.modulars:
+    class: 'PrestaShop\PrestaShop\Core\Grid\GridFactory'
+    arguments:
+      - '@flavioski.module.modularsofas.grid.definition.factory.modulars'
+      - '@flavioski.module.modularsofas.grid.data_provider.modulars'
+      - '@prestashop.core.grid.filter.form_factory'
+      - '@prestashop.core.hook.dispatcher'
